--- a/main.css
+++ b/main.css
@@ -17,10 +17,10 @@ svg {
 
 .background-image {
     background: url("./images/pexels-dids-3824262.jpg");
-    background-size:cover;
+    background-size:contain;
     position: fixed;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     z-index:-1;
 }
 
@@ -37,6 +37,7 @@ svg {
     color: white;
     font-size:1.8rem;
     text-decoration: none;
+    text-shadow: 1px 1px 1px rgba(255, 255, 255, 0.5);
 }
 
 .mobile-nav {
