--- a/main.css
+++ b/main.css
@@ -17,7 +17,7 @@ svg {
 
 .background-image {
     background: url("./images/pexels-dids-3824262.jpg");
-    background-size:contain;
+    background-size:cover;
     position: fixed;
     width: 100%;
     height: 100vh;
