--- a/main.css
+++ b/main.css
@@ -20,7 +20,7 @@ svg {
     background-size:cover;
     position: fixed;
     width: 100%;
-    height: 100vh;
+    height: 100%;
     z-index:-1;
 }
 
