--- a/main.css
+++ b/main.css
@@ -18,6 +18,7 @@ svg {
 .background-image {
     background: url("./images/pexels-dids-3824262.jpg");
     background-size:cover;
+    background-repeat: no-repeat;
     position: fixed;
     width: 100%;
     height: 100%;
