--- a/main.css
+++ b/main.css
@@ -4,10 +4,13 @@
 
 html {
     margin:0;
+    min-height:100%;
+    position:relative;
 }
 
 body {
     margin:0;
+    margin-bottom: 125px;
     font-family: 'Montserrat', Helvetica, sans-serif;
 }
 
@@ -128,6 +131,8 @@ svg {
 
 .header-category {
     color:white;
+    font-weight: bold;
+    font-size: 1.2rem;;
     margin: 0.5rem 0;
     background-color: rgba(185, 29, 66, 0.90);
     padding:0.5rem 1.2rem;
@@ -222,6 +227,9 @@ svg {
 }
 
 .main-footer {
+    position:absolute;
+    bottom:0;
+    width:100%;
     display:flex;
     flex-direction: column;
     align-items: center;
