--- a/main.css
+++ b/main.css
@@ -243,7 +243,7 @@ svg {
 }
 
 .main-footer a {
-    text-decoration: none;
+    text-decoration: underline;
     color:white;
 }
 
@@ -251,9 +251,15 @@ svg {
     .mobile-nav__toggle {
         display:none;
     }
+    
     .desktop-nav {
         display:flex;
         width: 40vw;
         justify-content: space-around;
+    }
+
+    .main-footer {
+        flex-direction: row;
+        justify-content: center;
     }
 }
